src/styles/product.scss
$height: 500px;
$width: $height;

.product-details {
  @extend .my-modal;

  &-header {
    padding: 2px 16px;
    background-color: #4a9922;
    color: white;
    font-size: 3.2rem;
  }

  &-barcode {
    padding: 2px 16px;
    text-align: center;
  }

  &-body {
    padding: 2px 16px;
    text-align: center;
  }

  &-image {
    max-width: 300px;
    max-height: 300px;
  }

  &-canvas {
    border: 2px solid black;
  }
}

